--- a/scss/base/_mediaqueries.scss
+++ b/scss/base/_mediaqueries.scss
@@ -110,7 +110,7 @@
     }
 }
 
-/* MEDIA QUERIES PARA RAZAS Y CLASES */
+/* Media Queries para la sección de Razas y Clases */
 @media (max-width: 768px) {
     .card {
         flex-direction: column;
@@ -118,11 +118,10 @@
 
     .card img {
         width: 100%;
-        height: auto;
     }
 
     .card-content {
-        padding: 10px;
+        width: 100%;
     }
 }
 
@@ -132,16 +131,12 @@
     }
 
     .races-classes p,
-    .card-container h3 {
+    .card-content h3 {
         font-size: 1rem;
     }
 
-    .card-content h4 {
-        font-size: 1.2rem;
-    }
-
     .card-content p {
-        font-size: 0.9rem;
+        font-size: 1rem; /* Ajuste para pantallas más pequeñas */
     }
 }
 
@@ -181,3 +176,4 @@
         font-size: 12px;
     }
 }
+
