--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,11 +108,15 @@ main h1 {
   border: groove 1px #000; }
 
 main h2 {
-  font-family: fuentecelta;
-  font-weight: 350;
-  color: black;
   text-align: center;
-  margin-bottom: 10px;
+  color: #333;
+  font-family: fuentecelta;
+  margin-bottom: 20px;
+  font-size: 2rem;
+  /* Aumenta el tamaño de la fuente */
+  font-weight: bold;
+  /* Añade negrita */
+  text-shadow: 2px 2px #ccc;
   background-color: #947962;
   border: groove 1px #000; }
 
