--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -91,11 +91,13 @@ main h1 {
 }
 
 main h2 {
-    font-family: fuentecelta;
-    font-weight: 350;
-    color: black;
     text-align: center;
-    margin-bottom: 10px;
+    color: #333;
+    font-family: fuentecelta;
+    margin-bottom: 20px;
+    font-size: 2rem; /* Aumenta el tamaño de la fuente */
+    font-weight: bold; /* Añade negrita */
+    text-shadow: 2px 2px #ccc;
     background-color: #947962;
     border: groove 1px #000;
 }
