--- a/scss/components/_historia.scss
+++ b/scss/components/_historia.scss
@@ -13,11 +13,12 @@
     margin-bottom: 20px;
 }
 
-.historia p {
+.lore p {
     text-align: justify;
-    color: #666;
+    color: #000000;
+    border-radius: 5px;
     font-family: fuentecelta;
-    font-size: 18px;
+    font-size: 1.5rem;
     line-height: 1.6;
     margin-bottom: 20px;
 }
