--- a/scss/components/_galeria.scss
+++ b/scss/components/_galeria.scss
@@ -1,33 +1,46 @@
 /* Estilos específicos para la galería */
+@mixin gallery-item($bg-color, $text-color, $text-align) {
+    position: absolute;
+    bottom: 0;
+    background-color: $bg-color;
+    width: 100%;
+    color: $text-color;
+    text-align: $text-align;
+    padding: 5px;
+}
+
 .galeria {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Tres columnas de igual tamaño */
+    grid-template-rows: repeat(4, 1fr); /* Cuatro filas de igual tamaño */
+    gap: 8px; /* Espacio entre los elementos */
+    grid-auto-flow: row;
+    grid-template-areas:
+        "grid-item1 grid-item1 grid-item2"
+        "grid-item3 grid-item4 grid-item5"
+        "grid-item6 grid-item7 grid-item5"
+        "grid-item8 grid-item8 grid-item9";
+    width: 100%; /* Asegura que la galería ocupe todo el ancho del contenedor */
 }
 
-.galeria h2 {
-    text-align: center;
-    color: #333;
-    font-family: fuentemedieval;
-    margin-bottom: 20px;
+.galeria img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
 }
 
-.galeria .imagenes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.galeria h3 {
+    @include gallery-item(rgba(17, 17, 17, 0.55), white, center);
 }
 
-.galeria .imagenes img {
-    width: 300px;
-    height: auto;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.galeria .imagenes img:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease-in-out;
-}
+/* Definiciones para las áreas de la cuadrícula */
+.grid-item1 { grid-area: grid-item1; }
+.grid-item2 { grid-area: grid-item2; }
+.grid-item3 { grid-area: grid-item3; }
+.grid-item4 { grid-area: grid-item4; }
+.grid-item5 { grid-area: grid-item5; }
+.grid-item6 { grid-area: grid-item6; }
+.grid-item7 { grid-area: grid-item7; }
+.grid-item8 { grid-area: grid-item8; }
+.grid-item9 { grid-area: grid-item9; }
