--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,59 @@ footer {
   width: 100%;
   box-sizing: border-box; }
 
+nav {
+  background-color: #303030;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  nav .hamburger {
+    display: none;
+    cursor: pointer; }
+    nav .hamburger .hamburger-line {
+      width: 30px;
+      height: 3px;
+      background-color: #fff;
+      margin: 5px;
+      transition: 0.3s; }
+  nav .menu {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0; }
+    nav .menu li {
+      margin: 0 15px; }
+      nav .menu li a {
+        text-decoration: none;
+        color: #fff;
+        font-size: 16px;
+        font-family: 'Arial', sans-serif;
+        padding: 10px;
+        border-radius: 5px;
+        transition: background-color 0.3s, color 0.3s; }
+        nav .menu li a:hover {
+          background-color: #490000;
+          color: #fff; }
+  @media (max-width: 768px) {
+    nav .hamburger {
+      display: block; }
+    nav .menu {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      background-color: #303030;
+      position: absolute;
+      top: 60px;
+      left: 0;
+      padding: 20px; }
+      nav .menu li {
+        margin: 10px 0; }
+        nav .menu li a {
+          padding: 15px;
+          text-align: center; }
+    nav .menu.show {
+      display: flex; } }
+
 /* Estilos específicos para la página de inicio */
 .banner {
   display: flex;
@@ -193,7 +246,7 @@ main div iframe {
   font-size: 2rem;
   margin-bottom: 15px;
   padding-bottom: 10px;
-  border-bottom: 2px solid #c97200; }
+  border-bottom: 2px solid #490000; }
 
 .lore p {
   text-align: justify;
@@ -416,7 +469,7 @@ main div iframe {
       border-radius: 5px;
       font-size: 16px; }
     .create-hero .hero-form button {
-      background-color: #c97200;
+      background-color: #490000;
       color: white;
       padding: 12px 20px;
       border: none;
