--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -46,7 +46,7 @@
         }
 
         button {
-            background-color: #c97200;
+            background-color: #490000;
             color: white;
             padding: 12px 20px;
             border: none;
