--- a/scss/components/_historia.scss
+++ b/scss/components/_historia.scss
@@ -30,7 +30,7 @@
     font-size: 2rem;
     margin-bottom: 15px;
     padding-bottom: 10px;
-    border-bottom: 2px solid #c97200;
+    border-bottom: 2px solid #490000;
 }
 
 .lore {
