--- a/scss/components/_historia.scss
+++ b/scss/components/_historia.scss
@@ -50,7 +50,7 @@
 
         &:hover {
             background-color: #f9f9f9;
-            border-color: #c97200;
+            border-color: #4b0000;
         }
     }
 
