--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -34,13 +34,66 @@ footer {
     box-sizing: border-box;
 }
 
+//Estilos Banner
+.banner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #947962;
+    background: linear-gradient(50deg,black,#947962,#490000);
+    animation: cambiar 3s ease-in infinite;
+    position: relative;
+    background-size: 400% 400%;
+}
+
+@keyframes cambiar{
+    0%{background-position: 0 50%;}
+    50%{background-position: 100% 50%;}
+    100%{background-position: 0 50%;}
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo img {
+    height: 80px;
+    border-radius: 8px;
+}
+
+.title {
+    font-family: fuentemedieval;
+    font-weight: 600;
+    font-size: 28px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    margin-top: 5px;
+    color: antiquewhite;
+}
+
+.social-media a {
+    margin-left: 10px;
+    text-decoration: none;
+}
+
+.social-media img {
+    height: 42px;
+    width: 42px;
+    margin-left: 5px;
+}
+
+
+// Estilos navbar
+
 // Variables para colores y fuentes
 $primary-color: #490000;
 $hover-color: #490000;
 $background-color: #303030;
 $text-color: #fff;
 
-// Estilos para el menú principal
 nav {
     background-color: $background-color;
     padding: 10px 20px;
@@ -84,36 +137,6 @@ nav {
                     color: #fff;
                 }
             }
-        }
-    }
-
-    @media (max-width: 768px) {
-        .hamburger {
-            display: block;
-        }
-
-        .menu {
-            display: none;
-            flex-direction: column;
-            width: 100%;
-            background-color: $background-color;
-            position: absolute;
-            top: 60px;
-            left: 0;
-            padding: 20px;
-
-            li {
-                margin: 10px 0;
-
-                a {
-                    padding: 15px;
-                    text-align: center;
-                }
-            }
-        }
-
-        .menu.show {
-            display: flex;
         }
     }
 }
