--- a/scss/base/_mediaqueries.scss
+++ b/scss/base/_mediaqueries.scss
@@ -1,4 +1,6 @@
 /* Media Queries para hacer la página responsive */
+
+//Banner
 @media (max-width: 768px) {
     .banner {
         flex-direction: column;
@@ -57,6 +59,39 @@
     nav ul li a {
         padding: 5px;
     }
+}
+
+// Nav bar
+nav{
+@media (max-width: 768px) {
+    .hamburger {
+        display: block;
+    }
+
+    .menu {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: $background-color;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 20px;
+
+        li {
+            margin: 10px 0;
+
+            a {
+                padding: 15px;
+                text-align: center;
+            }
+        }
+    }
+
+    .menu.show {
+        display: flex;
+    }
+}
 }
 
 /* Media Queries Slider*/
