--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -41,8 +41,8 @@ footer {
     align-items: center;
     padding: 10px;
     background-color: #947962;
-    background: linear-gradient(50deg,black,#947962,#490000);
-    animation: cambiar 3s ease-in infinite;
+    background: linear-gradient(50deg,#dd0000,black,#0093ce);
+    animation: cambiar 5s ease-in infinite;
     position: relative;
     background-size: 400% 400%;
 }
@@ -127,7 +127,7 @@ nav {
                 text-decoration: none;
                 color: $text-color;
                 font-size: 16px;
-                font-family: 'Arial', sans-serif;
+                font-family: fuentecelta;
                 padding: 10px;
                 border-radius: 5px;
                 transition: background-color 0.3s, color 0.3s;
