--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -55,7 +55,7 @@
             font-size: 16px;
 
             &:hover {
-                background-color: #303030;
+                background-color: #00a6cf;
                 transition-duration: 1s;
             }
         }
